# DevIL

./: CREDITS  ChangeLog  ChangeLog.2009  Makefile.am  TODO  configure.ac
DevIL/: .cvsignore  CREDITS  ChangeLog  ChangeLog.2009  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  default
DevIL/altivec/: altivec_typeconversion.c
DevIL/build-aux/: gen_ptr_defines.sh
DevIL/docs/: DevIL_manual.texi  devil.doxyfile.in  static.texi
DevIL/examples/opengl_example/: gltest.c
DevIL/examples/override_example/: iotest.c
DevIL/examples/register_read_example/: readtest.c
DevIL/gnulib/: Makefile.am
DevIL/include/IL/: .cvsignore  devil_internal_exports.h  il.h  ilu.h  ilut.h  ptr_defines.h
DevIL/lib/: IL.am  ILU.am  Makefile.am
DevIL/m4/: devil-generate-files.m4
DevIL/po/: ChangeLog  LINGUAS  ar.po  de.po  ja.po
DevIL/projects/powerbasic/: ilu.inc
DevIL/src-IL/include/: Makefile.am  il_endian.h  il_error.h  il_gif.h  il_internal.h  il_module.h  il_states.h
DevIL/src-IL/msvc8/: IL.vcproj
DevIL/src-IL/src/: Makefile.am  il_alloc.c  il_bmp.c  il_cut.c  il_dcx.c  il_dds-save.c  il_dds.c  il_doom.c  il_dpx.c  il_endian.c  il_exr.cpp  il_files.c  il_fits.c  il_gif.c  il_hdr.c  il_header.c  il_icon.c  il_inline.c  il_internal.c  il_io.c  il_jp2.c  il_jpeg.c  il_logging.c  il_manip.c  il_mdl.c  il_mng.c  il_mp3.c  il_pal.c  il_pcd.c  il_pcx.c  il_pic.c  il_pix.c  il_png.c  il_pnm.c  il_profiles.c  il_psd.c  il_psp.c  il_pxr.c  il_rle.c  il_rot.c  (+13 more)
DevIL/src-ILU/ilur/: ilur.c
DevIL/src-ILU/include/: ilu_alloc.h  ilu_internal.h
DevIL/src-ILU/src/: Makefile.am  ilu_filter.c  ilu_filter_rcg.c  ilu_manip.c
DevIL/src-ILUT/include/: ilut_allegro.h  ilut_opengl.h  ilut_states.h
DevIL/src-ILUT/src/: .cvsignore  Makefile.am  ilut_directx.c  ilut_directx10.c  ilut_opengl.c  ilut_states.c  ilut_win32.c
DevIL/test/: Makefile.am
DevIL/test/format_test/: format_checks.sh.in  testil.c
docs/: DevIL_manual.texi  Makefile.am  variables.texi.in
examples/allegro_example/: allegtest.c
examples/animation_example/: AnimTest.cpp
examples/cpp_wrapper_example/: il_wrap.cpp
examples/opengl_example/: gltest.c
examples/override_example/: iotest.c
examples/register_read_example/: readtest.c
examples/simple_example/: simple.c  simple_example-vc9.vcproj
examples/volume_example/: 3dtest.c
examples/windows_example/: BatchConv.cpp  resource.h  windows_example-vc9.vcproj  windows_example.cpp  windows_example.rc
include/IL/: config.h.win  devil_cpp_wrapper.hpp  devil_internal_exports.h  il.h  il_wrap.h  ilu.h  ilut.h  ilut_config.h
lib/: IL.am  ILU.am  ILUT.am  Makefile.am  Useful_stuff.am
m4/: devil-api_checks.m4  devil-definitions.m4  devil-generate-files.m4  devil-report.m4  visibility.m4
po/: POTFILES.in  ar.po  cs.po  de.po  es.po  fr.po  it.po  ja.po  nl.po
projects/msvc8/: ImageLib.sln
projects/msvc9/: ImageLib Unicode.sln  ImageLib.sln
projects/powerbasic/: il.inc  ilut.inc
src-IL/include/: il_alloc.h  il_bmp.h  il_dcx.h  il_dds.h  il_doompal.h  il_dpx.h  il_endian.h  il_exr.h  il_files.h  il_gif.h  il_hdr.h  il_icns.h  il_icon.h  il_internal.h  il_jp2.h  il_jpeg.h  il_lif.h  il_logging.h  il_manip.h  il_module.h  il_pal.h  il_pcx.h  il_pic.h  il_pnm.h  il_psd.h  il_psp.h  il_sgi.h  il_states.h  il_targa.h  il_utx.h  il_vtf.h  il_wdp.h
src-IL/msvc8/: IL Unicode.vcproj  IL.vcproj  il.def
src-IL/msvc9/: IL Unicode.vcproj  IL.vcproj  il.def
src-IL/src/: Makefile.am  il_blp.c  il_blp.cpp  il_bmp.c  il_bmp.cpp  il_convbuff.c  il_convbuff.cpp  il_convert.cpp  il_cut.cpp  il_dcx.c  il_dcx.cpp  il_dds-save.c  il_dds-save.cpp  il_dds.cpp  il_devil.cpp  il_dicom.c  il_dicom.cpp  il_doom.cpp  il_dpx.cpp  il_endian.cpp  il_error.c  il_error.cpp  il_exr.c  il_exr.cpp  il_fastconv.cpp  il_files.cpp  il_fits.cpp  il_ftx.c  il_ftx.cpp  il_gif.cpp  il_hdr.cpp  il_header.cpp  il_icns.c  il_icns.cpp  il_icon.c  il_icon.cpp  il_iff.c  il_iff.cpp  il_ilbm.c  il_ilbm.cpp  (+70 more)
src-ILU/ilur/: ilur.c
src-ILU/include/: ilu_internal.h  ilu_states.h
src-ILU/msvc8/: ILU Unicode.vcproj  ILU.vcproj  ilu.def
src-ILU/msvc9/: ILU Unicode.vcproj  ILU.vcproj  ilu.def
src-ILU/src/: Makefile.am  ilu_alloc.c  ilu_filter.c  ilu_filter.cpp  ilu_filter_rcg.cpp  ilu_main.c  ilu_main.cpp  ilu_manip.c  ilu_manip.cpp  ilu_mipmap.c  ilu_mipmap.cpp  ilu_noise.c  ilu_noise.cpp  ilu_region.c  ilu_region.cpp  ilu_rotate.c  ilu_rotate.cpp  ilu_scale.c  ilu_scale.cpp  ilu_scale2d.cpp  ilu_scale3d.cpp  ilu_states.cpp  ilu_utilities.c
src-ILUT/include/: ilut_internal.h
src-ILUT/msvc8/: ILUT Unicode.vcproj  ILUT.vcproj  ilut.def
src-ILUT/msvc9/: ILUT Unicode.vcproj  ilut.def
src-ILUT/src/: Makefile.am  ilut_allegro.c  ilut_allegro.cpp  ilut_directx.c  ilut_directx.cpp  ilut_directx10.c  ilut_directx10.cpp  ilut_directx9.c  ilut_directx9.cpp  ilut_directxm.c  ilut_directxm.cpp  ilut_internal.cpp  ilut_main.cpp  ilut_opengl.c  ilut_opengl.cpp  ilut_sdlsurface.c  ilut_sdlsurface.cpp  ilut_win32.c  ilut_win32.cpp  ilut_x11.c  ilut_x11.cpp
test/: Makefile.am
test/format_test/: format_checks.sh.in  generate-images.sh  ilu_checks.sh.in  testil.c
