info_TEXINFOS = DevIL_manual.texi

dvi:
	@echo "The DVI documentation won't be built. It is not feasible since it contains a lot of images. Build PDF or HTML docs instead..."

distclean-local:
	rm -f formats.texi

EXTRA_DIST = variables.texi\
	     static.texi
EXTRA_DIST += images/DevIL.jpg\
	     images/DevIL.png\
	     images/devil_msvc_include.png\
	     images/devil_msvc_lib.png\
	     images/ilu_small_stairway_Alienify.jpg\
	     images/ilu_small_stairway_BlurAvg_10.jpg\
	     images/ilu_small_stairway_BlurGaussian_10.jpg\
	     images/ilu_small_stairway_Contrast_0.4.jpg\
	     images/ilu_small_stairway_Contrast_1.7.jpg\
	     images/ilu_small_stairway_Emboss.jpg\
	     images/ilu_small_stairway_Equalize.jpg\
	     images/ilu_small_stairway_GammaCorrect_0.7.jpg\
	     images/ilu_small_stairway_GammaCorrect_1.6.jpg\
	     images/ilu_small_stairway_Mirror.jpg\
	     images/ilu_small_stairway_Negative.jpg\
	     images/ilu_small_stairway_Noisify_0.1.jpg\
	     images/ilu_small_stairway_Noisify_0.8.jpg\
	     images/ilu_small_stairway_Pixelize_5.jpg\
	     images/ilu_small_stairway_Saturate1f_0.6.jpg\
	     images/ilu_small_stairway_Sharpen_1.8_2.jpg\
	     images/ilu_small_stairway_Sharpen_2.1_3.jpg\
	     images/ilu_small_stairway_Wave_1.2.jpg\
	     images/original_stairway.jpg\
	     images/small_stairway.jpg
